--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-# Dependencies
-node_modules/
+node_modules
+package-lock.json
+yarn.lock
 
-# Env
-.env
-.env.local
-.env.development
-.env.test
-.env.production
-.env.staging
-
-# System Files
 .DS_Store
-Thumbs.db
+.cache
+.env
+.vercel
+.output
+.nitro
+/build/
+/api/
+/server/build
+/public/build# Sentry Config File
+.env.sentry-build-plugin
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+.tanstack
