--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "journal-chatbot",
-  "version": "0.0.0",
+  "name": "tanstack-start-example-basic",
   "private": true,
+  "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
+    "dev": "vite dev",
+    "build": "vite build && tsc --noEmit",
+    "preview": "vite preview",
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.117.1",
-    "@tanstack/react-start": "^1.117.2",
+    "@tanstack/react-router": "^1.141.8",
+    "@tanstack/react-router-devtools": "^1.141.8",
+    "@tanstack/react-start": "^1.141.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "vinxi": "0.5.1"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/react": "^19.0.8"
-  },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^22.5.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.6.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.7.2",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4"
+  }
 }
