--- a/package.json
+++ b/package.json
@@ -14,25 +14,27 @@
     "format:check": "oxfmt --check"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.141.8",
-    "@tanstack/react-router-devtools": "^1.141.8",
-    "@tanstack/react-start": "^1.141.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.2"
+    "@ai-sdk/react": "2.0.117",
+    "@tanstack/react-router": "1.141.8",
+    "@tanstack/react-router-devtools": "1.141.8",
+    "@tanstack/react-start": "1.141.8",
+    "ai": "5.0.115",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwind-merge": "2.6.0",
+    "zod": "4.2.1"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "@types/node": "^22.5.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.6.0",
-    "oxfmt": "^0.19.0",
-    "oxlint": "^1.34.0",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.7.2",
-    "vite": "^7.1.7",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@tailwindcss/vite": "4.1.18",
+    "@types/node": "22.5.4",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "@vitejs/plugin-react": "4.6.0",
+    "oxfmt": "0.19.0",
+    "oxlint": "1.34.0",
+    "tailwindcss": "4.1.18",
+    "typescript": "5.7.2",
+    "vite": "7.1.7",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
