Update .oxfmtrc.json to include ignore patterns and remove .prettierignore file

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -139,5 +139,10 @@
     "builtin": true
   },
   "globals": {},
-  "ignorePatterns": []
+  "ignorePatterns": [
+    "**/build",
+    "**/public",
+    "pnpm-lock.yaml",
+    "routeTree.gen.ts"
+  ]
 }
