--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic",
+  "name": "journal-chatbot",
   "private": true,
   "type": "module",
   "sideEffects": false,
@@ -7,7 +7,8 @@
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
     "preview": "vite preview",
-    "start": "node .output/server/index.mjs",
+    "deploy": "npm run build && wrangler deploy",
+    "cf-typegen": "wrangler types",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "format": "oxfmt",
@@ -25,6 +26,7 @@
     "zod": "4.2.1"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.17.1",
     "@tailwindcss/vite": "4.1.18",
     "@types/node": "22.5.4",
     "@types/react": "19.0.8",
@@ -35,6 +37,7 @@
     "tailwindcss": "4.1.18",
     "typescript": "5.7.2",
     "vite": "7.1.7",
-    "vite-tsconfig-paths": "5.1.4"
+    "vite-tsconfig-paths": "5.1.4",
+    "wrangler": "^4.54.0"
   }
 }
