--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@ai-sdk/react": "2.0.117",
     "@base-ui/react": "1.0.0",
     "@fontsource-variable/noto-sans": "5.2.10",
+    "@supabase/ssr": "0.8.0",
+    "@tanstack/react-query": "5.90.16",
+    "@tanstack/react-query-devtools": "5.91.2",
     "@tanstack/react-router": "1.141.8",
     "@tanstack/react-router-devtools": "1.141.8",
+    "@tanstack/react-router-ssr-query": "1.144.0",
     "@tanstack/react-start": "1.141.8",
     "ai": "5.0.115",
     "class-variance-authority": "0.7.1",
