--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -1,4 +1,10 @@
 {
   "$schema": "./node_modules/oxfmt/configuration_schema.json",
-  "ignorePatterns": ["**/public", "pnpm-lock.yaml", "routeTree.gen.ts", "CLAUDE.md"]
+  "ignorePatterns": [
+    "**/public",
+    "pnpm-lock.yaml",
+    "routeTree.gen.ts",
+    "CLAUDE.md",
+    "database.types.ts"
+  ]
 }
