--- a/package.json
+++ b/package.json
@@ -17,44 +17,44 @@
     "db:types": "dotenv bunx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID --schema public > src/lib/database.types.ts"
   },
   "dependencies": {
-    "@ai-sdk/react": "2.0.117",
+    "@ai-sdk/react": "3.0.30",
     "@base-ui/react": "1.0.0",
     "@fontsource-variable/noto-sans": "5.2.10",
     "@supabase/ssr": "0.8.0",
     "@tanstack/react-form": "1.27.7",
     "@tanstack/react-query": "5.90.16",
     "@tanstack/react-query-devtools": "5.91.2",
-    "@tanstack/react-router": "1.141.8",
-    "@tanstack/react-router-devtools": "1.141.8",
-    "@tanstack/react-router-ssr-query": "1.144.0",
-    "@tanstack/react-start": "1.141.8",
-    "ai": "5.0.115",
+    "@tanstack/react-router": "1.147.3",
+    "@tanstack/react-router-devtools": "1.149.0",
+    "@tanstack/react-router-ssr-query": "1.147.3",
+    "@tanstack/react-start": "1.149.1",
+    "ai": "6.0.28",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "dayjs": "^1.11.19",
+    "dayjs": "1.11.19",
     "lucide-react": "0.562.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-markdown": "^10.1.0",
-    "shadcn": "^3.6.3",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-markdown": "10.1.0",
+    "shadcn": "3.6.3",
     "tailwind-merge": "3.4.0",
-    "tw-animate-css": "^1.4.0",
-    "zod": "4.2.1"
+    "tw-animate-css": "1.4.0",
+    "zod": "4.3.5"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.17.1",
+    "@cloudflare/vite-plugin": "1.20.1",
     "@tailwindcss/vite": "4.1.18",
-    "@types/node": "22.5.4",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "@vitejs/plugin-react": "4.6.0",
-    "dotenv-cli": "^11.0.0",
-    "oxfmt": "0.19.0",
-    "oxlint": "1.34.0",
+    "@types/node": "25.0.6",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "5.1.2",
+    "dotenv-cli": "11.0.0",
+    "oxfmt": "0.24.0",
+    "oxlint": "1.39.0",
     "tailwindcss": "4.1.18",
-    "typescript": "5.7.2",
-    "vite": "7.1.7",
-    "vite-tsconfig-paths": "5.1.4",
-    "wrangler": "^4.54.0"
+    "typescript": "5.9.3",
+    "vite": "7.3.1",
+    "vite-tsconfig-paths": "6.0.4",
+    "wrangler": "4.58.0"
   }
 }
